applications/wordpress/manifests/002-mysql-sts.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: wordpress-manifests
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/component: mysql
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: wordpress
      app.kubernetes.io/component: mysql
  serviceName: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wordpress
        app.kubernetes.io/component: mysql
    spec:
      containers:
        - image: mysql:9.4
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        storageClassName: standard
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 500Mi
