applications/wordpress/manifests/003-mysql-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: wordpress-manifests
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/component: mysql
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      # protocol: TCP
  selector:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/component: mysql
