applications/wordpress/manifests/006-wordpress-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress-manifests
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/component: wordpress
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      # protocol: TCP
  selector:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/component: wordpress
