applications/wordpress/manifests/009-wordpress-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress-argocd
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: wordpress-managed-cert
    networking.gke.io/v1beta1.FrontendConfig: wordpress-frontend-config
spec:
  rules:
    - host: wordpress.andreas.mcce.werschlan.at
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
